--- a/client-side/html/register.html
+++ b/client-side/html/register.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="form-container">
-            <h2>Register</h2>
+            <h2>TaskPilot</h2>
             <form id="registerForm">
                 <div class="input-group">
                     <label for="username">Username</label>
@@ -23,8 +23,8 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <button type="submit" class="register-button">Register</button>
-                <p class="redirect-login">Already have an account? <a href="login.html">Login</a></p>
+                <button type="submit" class="register-button">sign up</button>
+                <p class="redirect-login">Already have an account? <a href="login.html">Sign in</a></p>
             </form>
         </div>
     </div>
