--- a/client-side/html/board.html
+++ b/client-side/html/board.html
@@ -27,12 +27,21 @@
         </nav>
         <!-- ---------- sidebar ------------ -->
         <div class="sidebar">
-            <a href=""><img src=""><p>Profile</p></a>
-            <a href=""><img src=""><p>Home</p></a>
-            <a href=""><img src=""><p>Boards</p></a>
-            <a href=""><img src=""><p>Settings</p></a>
+            <div class="side-links">
+                <a href=""><img src="../images/user-icon.png"><p class="profile">Profile</p></a>
+                <a href=""><img src="../images/home-icon.png"><p class="home">Home</p></a>
+                <a href=""><img src="../images/board-list.png"><p class="boards">Boards</p></a>
+                <a href=""><img src="../images/settings.png"><p class="settings">Settings</p></a>
+            </div>
             <hr>
-            <a href=""><img src=""><p>Your Boards</p><img src=""></a>
+            <div class="boards-list">
+                <a href=""><p class="yourBoards">Your Boards</p><img src="../images/plus.png"></a>
+                <div class="boards"></div>
+            </div>
+        </div>
+        <!---------- main  ---------->
+        <div class="mainContainer">
+            <div class="Lists"></div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
